<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.github.fabiankevin</groupId>
    <artifactId>quickstart-spring-boot-parent-starter</artifactId>
    <version>0.0.41-SNAPSHOT</version>
    <name>quickstart-spring-boot-parent-starter</name>
    <description>Provides sensible Spring Boot defaults to speed up development and let you focus on your business logic.</description>
    <packaging>pom</packaging>
    <modules>
        <module>quickstart-spring-boot-starter-web</module>
    </modules>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer>
            <name>Kevin Fabian</name>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:kevin-fabian/microweb-spring-boot-parent-starter</connection>
        <developerConnection/>
        <tag/>
        <url>scm:git:git@github.com:kevin-fabian/microweb-spring-boot-parent-starter</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>${project.artifactId}</name>
            <url>https://maven.pkg.github.com/kevin-fabian/microweb-spring-boot-parent-starter</url>
        </repository>
    </distributionManagement>
    <properties>
        <java.version>25</java.version>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <gitflow-maven-plugin.version>1.21.0</gitflow-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.fabiankevin</groupId>
                <artifactId>quickstart-spring-boot-starter-web</artifactId>
                <version>0.0.41-SNAPSHOT</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>prepare-agent</id>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <goals>
                                <goal>report</goal>
                            </goals>
                            <phase>prepare-package</phase>
                        </execution>
                        <execution>
                            <id>check</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <rule>
                                        <element>BUNDLE</element>
                                        <limits>
                                            <limit>
                                                <counter>LINE</counter>
                                                <value>COVEREDRATIO</value>
                                                <minimum>0.80</minimum>
                                            </limit>
                                        </limits>
                                    </rule>
                                </rules>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.amashchenko.maven.plugin</groupId>
                    <artifactId>gitflow-maven-plugin</artifactId>
                    <version>${gitflow-maven-plugin.version}</version>
                    <configuration>
                        <noBackMerge>true</noBackMerge>
                        <releaseMergeFFOnly>true</releaseMergeFFOnly>
                        <releaseMergeNoFF>false</releaseMergeNoFF>
                        <skipTestProject>true</skipTestProject>
                        <skipReleaseMergeProdBranch>false</skipReleaseMergeProdBranch>
                        <keepBranch>false</keepBranch>
                        <pushRemote>true</pushRemote>
                        <gitFlowConfig>
                            <productionBranch>main</productionBranch>
                            <developmentBranch>develop</developmentBranch>
                            <featureBranchPrefix>feature/</featureBranchPrefix>
                            <releaseBranchPrefix>release/</releaseBranchPrefix>
                            <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
                            <supportBranchPrefix>chore/</supportBranchPrefix>
                            <origin>origin</origin>
                        </gitFlowConfig>
                        <commitMessages>
                            <releaseFinishMergeMessage>Release ${project.artifactId}-@{version}
                            </releaseFinishMergeMessage>
                        </commitMessages>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
